Fixed up spacing and font size

--- a/src/meinberlin/meinberlin/static/stylesheets/scss/components/_error_pages_theme.scss
+++ b/src/meinberlin/meinberlin/static/stylesheets/scss/components/_error_pages_theme.scss
@@ -6,4 +6,6 @@
 
 .error-page-title {
     color: $color-text-normal;
+    font-size: $font-size-large;
+    margin: (40px / $font-size-large * 1em) 0 0;
 }
